--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   	<div class="container mt-3 mb-3">
   		<h3 class="display-4 text-center text-primary">
   			<!-- <i class="fa fa-user-circle text-primary"></i><span>Sim</span>Dave -->
-  			<i class="fa fa-book text-primary"></i><span>BookList</span><!-- <i class="fa fa-mobile text-primary"></i> --><span>App</span> (By SimDave)</h3>
+  			<i class="fa fa-book text-primary"></i><span>BookList</span><!-- <i class="fa fa-mobile text-primary"></i> --><span>App</span><!-- (By SimDave)--></h3>
   			<!-- <p class="text-primary text-center" style="font-size: 25px">by SimDave</p> -->
   			<hr class="text-primary" style="height: 4px">
   			<p class="text-primary text-center" style="font-size: 20px">Keep record of the books you read</p>
@@ -53,6 +53,8 @@
   				</thead>
   				<tbody id="book-list"></tbody>
   			</table>
+        <hr>
+        <h3><a href="https://akasimdave.github.io/my-portfolio-site/"><i class="fa fa-user text-primary"></i> About Developer</a></h3>
   	</div>
 
     <!-- Optional JavaScript -->
